Fix some more deprecation warnings when building with Java 9. Use of Class.newInstance()
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc8.0.x/trunk@1811309 13f79535-47bb-0310-9956-ffa450edef68